Sprint 15 add-bookings fix(1)